# tauri-mcp

./: .gitignore  CLAUDE_DESKTOP_COMPATIBILITY.md  Cargo.toml  LICENSE  README.md  SETUP.md  build-dxt-node-flat.sh  build-dxt-node.sh  build-dxt-proper.sh  build-dxt.sh  manifest-node-flat.json  manifest-node.json  manifest.json  tauri-mcp-0.1.5.dxt  tauri-mcp.dxt  tauri-mcp.example.toml  test_mcp.json  test_mcp_full.sh
dxt-package/: manifest.json
dxt-package/dxt-test/: manifest.json
server/: index.js  package.json
src/: lib.rs  main.rs  server.rs
src/tools/: debug.rs  input.rs  ipc.rs  mod.rs  process.rs  window.rs
src/utils/: mod.rs  platform.rs  screenshot.rs
tests/: integration_test.rs
