[package]
name = "tauri-mcp"
version = "0.1.5"
edition = "2021"
authors = ["David Irvine <david.irvine@maidsafe.net>"]
description = "MCP server for testing and interacting with Tauri v2 applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dirvine/tauri-mcp"
homepage = "https://github.com/dirvine/tauri-mcp"
documentation = "https://github.com/dirvine/tauri-mcp#readme"
readme = "README.md"
keywords = ["tauri", "mcp", "testing", "automation"]
categories = ["development-tools", "gui"]

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpc-core = "18.0"
# jsonrpc-derive = "18.0"  # Not needed with manual method registration
jsonrpc-core-client = "18.0"

# Process and system monitoring
sysinfo = "0.30"
nix = { version = "0.27", features = ["process"], target_os = "linux" }
winapi = { version = "0.3", features = ["processthreadsapi", "winnt", "handleapi", "winuser", "winbase"], target_os = "windows" }

# Screenshot functionality
screenshots = "0.8"
image = "0.24"
base64 = "0.21"

# Input simulation
enigo = "0.2"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
config = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# WebDriver support for Tauri
reqwest = { version = "0.11", features = ["json"] }

# IPC and window management utilities
uuid = { version = "1.6", features = ["v4"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Additional dependencies
chrono = "0.4"

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
core-graphics = "0.23"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"
xcb = "1.3"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"

[[bin]]
name = "tauri-mcp"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3